--- a/네니오.md
+++ b/네니오.md
@@ -1,1 +1,16 @@
 ## 네니오 소개
+
+[IOS]
+Swift, SwiftUI, Composable Architecture
+
+[안드로이드]
+- 언어 : Kotlin
+- 프레임워크 : Android
+- 화면 : Jetpack compose
+- 비동기 작업 : Coroutine
+- 로컬 디비: Room
+- Http Client : Retrofit
+- 화면 데이터 유지 : AAC ViewModel
+- 화면 전환 : Jetpack Navigation
+- 데이터 관찰 : StateFlow
+- 의존성 주입 : Hilt
