--- a/네니오.md
+++ b/네니오.md
@@ -1,4 +1,5 @@
 ## 네니오 소개
+기획자, 디자이너, 서버 개발자들과 팀을 이루어 진행중인 사이드 프로젝트 '네니오'는 질문에 네/아니오로 대답하는 커뮤니티 서비스입니다. 저는 IOS, 안드로이드 개발자로서 참여하였습니다. (IOS : 100%, AOS : 90%)
 
 [IOS]
 Swift, SwiftUI, Composable Architecture
