--- a/네니오.md
+++ b/네니오.md
@@ -1,10 +1,19 @@
-## 네니오 소개
-기획자, 디자이너, 서버 개발자들과 팀을 이루어 진행중인 사이드 프로젝트 '네니오'는 질문에 네/아니오로 대답하는 커뮤니티 서비스입니다. 저는 IOS, 안드로이드 개발자로서 참여하였습니다. (IOS : 100%, AOS : 90%)
+# 네니오 소개
+기획자, 디자이너, 서버 개발자들과 팀을 이루어 진행중인 사이드 프로젝트 '네니오'는 질문에 네/아니오로 대답하는 커뮤니티 서비스입니다. 저는 IOS, 안드로이드 개발자로서 참여하였습니다. (IOS : 100%, AOS : 90%, 서버 : 10%)
 
-[IOS]
+## 기획, 디자인
+
+Figma를 이용하여 기획, 디자인
+
+<img width="1181" alt="image" src="https://github.com/yeon1216/introduce/assets/37677444/2d0a6764-662c-4852-b871-ecfe1e702532">
+
+
+
+
+## IOS
 Swift, SwiftUI, Composable Architecture
 
-[안드로이드]
+## 안드로이드
 - 언어 : Kotlin
 - 프레임워크 : Android
 - 화면 : Jetpack compose
@@ -15,3 +24,7 @@ Swift, SwiftUI, Composable Architecture
 - 화면 전환 : Jetpack Navigation
 - 데이터 관찰 : StateFlow
 - 의존성 주입 : Hilt
+
+## 소스코드 관리
+Github Dolittle Organization을 만들어서 3개의 저장소에서 AOS, IOS, 서버 소스코드 관리중
+![dolittle](https://github.com/yeon1216/introduce/assets/37677444/5f7c5672-c26f-4713-acf7-d11a20180d5b)
