--- a/네니오.md
+++ b/네니오.md
@@ -13,6 +13,11 @@ Figma를 이용하여 기획, 디자인
 ## IOS
 Swift, SwiftUI, Composable Architecture
 
+아래 코드 참고
+https://github.com/pointfreeco/swift-composable-architecture/tree/ae491c9e3f66631e72d58db8bb4c27dfc3d3afd4
+
+
+
 ## 안드로이드
 - 언어 : Kotlin
 - 프레임워크 : Android
@@ -26,5 +31,5 @@ Swift, SwiftUI, Composable Architecture
 - 의존성 주입 : Hilt
 
 ## 소스코드 관리
-Github Dolittle Organization을 만들어서 3개의 저장소에서 AOS, IOS, 서버 소스코드 관리중
+Github에 Dolittle Organization을 만들고, 3개의 저장소에서 AOS, IOS, 서버 소스코드 관리중
 ![dolittle](https://github.com/yeon1216/introduce/assets/37677444/5f7c5672-c26f-4713-acf7-d11a20180d5b)
