--- a/네니오.md
+++ b/네니오.md
@@ -1,5 +1,5 @@
 # 네니오 소개
-기획자, 디자이너, 서버 개발자들과 팀을 이루어 진행중인 사이드 프로젝트 '네니오'는 질문에 네/아니오로 대답하는 커뮤니티 서비스입니다. 저는 IOS, 안드로이드 개발자로서 참여하였습니다. (IOS : 100%, AOS : 90%, 서버 : 10%)
+기획자, 디자이너, 서버 개발자들과 팀을 이루어 진행중인 사이드 프로젝트 '네니오'는 질문에 네/아니오로 대답하는 커뮤니티 서비스입니다. 저는 IOS, 안드로이드 개발자로서 참여하였습니다. IOS와 안드로이드는 현재 화면 개발이 완료되어있습니다. 서버 프레임워크는 nestjs를 이용하였고 rest api로 클라이언트와 http 통신합니다. IOS는 100%, AOS는 90%, 서버는 10%정도 제가 작업하였습니다.
 
 ## 기획, 디자인
 
